# apple-mail-mcp

./: CHANGELOG.md  Makefile  README.md  pyproject.toml
.claude/: CLAUDE.md
.claude/skills/release/: SKILL.md
.github/workflows/: test.yml
docs/: SECURITY.md
docs/guides/: COMPLEXITY.md  DEVELOPMENT.md  THREAT_MODEL.md
docs/plans/: 2026-05-22-issue-213-threat-model-design.md  2026-05-22-issue-213-threat-model.md
docs/reference/: TOOLS.md
evals/agent_tool_usability/: run_eval.py  scenarios.py  tool_descriptions.md
scripts/: check_complexity.sh  check_docs.sh
src/apple_mail_mcp/: __init__.py  cli.py  draft_builder.py  exceptions.py  imap_connector.py  imap_overrides.py  mail_connector.py  security.py  server.py  utils.py
tests/benchmarks/: baseline.json
tests/e2e/: test_mcp_tools.py  test_stdio_transport.py
tests/integration/: test_escaping_property.py  test_mail_integration.py
tests/unit/: test_attachments.py  test_cli.py  test_draft_builder.py  test_drafts.py  test_exceptions.py  test_imap_connector.py  test_imap_injection.py  test_imap_overrides.py  test_mail_connector.py  test_property_security.py  test_security.py  test_server.py  test_utils.py
